# mzml2gnps

./: .gitattributes  README.md  pyproject.toml
.history/: README_20250326203537.md  README_20250326204156.md  README_20250326204204.md
.history/src/mzml2gnps/: mzml2gnps_cli_20250812132942.py  mzml2gnps_cli_20250812133821.py
mzml2gnps/: command_line.py  main.py  methods.py  test.py
mzml2gnps.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
src/mzml2gnps/: command_line.py  main.py  methods.py  readmse.py  test.py
src/mzml2gnps.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
